compiler/test-data/parser/errors/control/repeat_missing_body.frel
module test

backend ListBackend {
    items : List<String> = []
}

blueprint Bad {
    with ListBackend

    repeat on items as item
}
